# debugomatic-template

./: CMakeLists.txt  README.md  debugomatic.c  hardware_config.h
piosrc/: parallelio.pio
